<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="project.it.onlinesurveyapp.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/survey_icon" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="22dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="22dp"
                android:hint="@string/surname" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_marginTop="22dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/emailBox"
                android:layout_marginTop="22dp"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <EditText
                android:id="@+id/confirmPasswordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/passwordBox"
                android:layout_marginTop="22dp"
                android:inputType="textPassword"
                android:hint="@string/confirmPassword" />

            <EditText
                android:id="@+id/domain"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/port"
                android:layout_alignBottom="@+id/port"
                android:layout_alignParentStart="true"
                android:hint="@string/domain" />

            <EditText
                android:id="@+id/port"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/registerButton"
                android:layout_below="@+id/confirmPasswordBox"
                android:layout_marginTop="22dp"
                android:hint="@string/port"
                android:inputType="number" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/port"
                android:layout_marginTop="22dp"
                android:text="@string/register" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>