<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:gravity="center"
        android:theme="@style/MyCustomTheme"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/survey_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/survey"
            android:textColor="#006C4B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/survey_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_below="@+id/survey_name" />

        <TextView
            android:id="@+id/argument_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/survey_name"
            android:layout_below="@+id/survey_title"
            android:layout_marginTop="15dp"
            android:text="@string/argument"
            android:textColor="#006C4B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/argument_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/argument_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/question_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/GoAhead"
            android:layout_below="@+id/argument_title"
            android:layout_marginTop="15dp"
            android:text="@string/question"
            android:textColor="#006C4B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/question_title"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/answers_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/answers"
            android:textColor="#006C4B"
            android:textSize="20sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answers_name"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center"
            android:layout_centerHorizontal="true" />

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/GoAhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_answers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/ahead_button" />

    </RelativeLayout>